# pypag

./: .gitmodules  CMakeLists.txt  README.md
sample/: sample.py
src/cpp/: pypag.cpp
